@@ -17,6 +17,8 @@
         <title>FedOAuth - {% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="{{ static_content_root }}/fedoauth/fedoauth.css">
 
+        <meta name="generator" content="FedOAuth {{ version }}">
+
         {% block javascript %}
         {% endblock %}
     </head>
