@@ -20,6 +20,8 @@
         <title>FedOAuth - {% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="{{ static_content_root }}/fedora/fedora.css">
 
+        <meta name="generator" content="FedOAuth {{ version }}">
+
         {% block javascript %}
         {% endblock %}
     </head>
